--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "deploy": "node ./node_modules/ext-framework/bin/deploy.js"
   },
   "dependencies": {
+    "@manaflair/redux-batch": "^1.0.0",
     "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.3.1",
@@ -26,6 +27,7 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-pngquant": "^9.0.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "phusion": "git+https://git@github.com/ieatstickers/phusion.git",
     "postcss-loader": "^4.3.0",
     "postcss-pxtorem": "^6.0.0",
     "react": "^17.0.2",
@@ -44,7 +46,6 @@
     "webpack": "^5.45.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
-    "webpack-stream": "^6.1.2",
-    "phusion": "git+https://git@github.com/ieatstickers/phusion.git"
+    "webpack-stream": "^6.1.2"
   }
 }
